@@ -7,6 +7,7 @@
 * Added product generation stats and performance are shown during generation.
 * Added product generation stats and performance are logged to the debug.log; the WPG_LOG constant can be used to turn that off by setting it to false in the wp-config.php.
 * Fixed generator JS not aware of updated limit directly after saving settings.
+* Fixed missing output escaping in the admin section.
 
 = 2.0.0 =
 * Requires WooCommerce 5.8.
